// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <div
    className="w3-container"
  >
    <GifGrid
      category="ferdinand"
      key="ferdinand"
    />
    <GifGrid
      category="puppy"
      key="puppy"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> debe mostrar <GifExpertApp /> correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <div
    className="w3-container"
  >
    <GifGrid
      category="oso"
      key="oso"
    />
  </div>
</Fragment>
`;
